--- a/styles/style.css
+++ b/styles/style.css
@@ -105,9 +105,62 @@ body{
     border-radius: 20px;
 }
 
-#invitacion h3{
+#invitacion #frase h3{
     padding-top: 40px;
     margin: auto;
     width: 70%;
-    font-size: 35px;
+    font-size: 25px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#nombre h1{
+    padding-top: 30px;
+    font-size: 70px;
+    font-family: "Festive";
+    color: #efb810;
+}
+
+#padres h3{
+    padding-top: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #efb810;
+
+}
+
+#padres h3{
+    padding-top: 10px;
+    font-size: 25px;
+    
+}
+
+#datos p{
+    padding-top: 40px;
+}
+
+#datos h3{
+    color: #efb810;
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#datos2{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: auto;
+    width: 95%;
+
+}
+
+.dato{
+    padding-top: 20px;
+    border: 1px solid white;  
+    height: 120px;
+    width: 20%;
+}
+
+.dato img{
+    height: 60px;
 }
