--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body{
     background-color: rgba(219,211,198,255);
     background-image: url('../src/fondo.jpg');
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 #container{
@@ -95,12 +96,12 @@ body{
     transform: scaleX(-1);
 }
 
-#invitacion{
+#invitacion,#asistencia,#ubicacion{
     margin-top: 60px;
 
     background-color: black;
     color: white;
-    height: 700px;
+    height: 720px;
     opacity: 0.88;
     border-radius: 20px;
 }
@@ -162,4 +163,21 @@ body{
 
 .dato img{
     height: 60px;
+}
+
+.dato p{
+    height: 40px;
+}
+
+.dato a{
+    color: #efb810;
+}
+
+#conf-asitencia{
+    width: 200px;
+    margin-top: 20px;
+    padding: 15px;
+    border-radius: 30px;
+    background-color: #efb810;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
