--- a/styles/style.css
+++ b/styles/style.css
@@ -22,10 +22,9 @@ body{
 #container{
     margin: auto;
     padding: 80px;
+    padding-bottom: 0px;
     width: 60%;
-    height: 100vh;
     text-align: center;
-
 }
 
 #header{
@@ -125,13 +124,11 @@ body{
     padding-top: 30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #efb810;
-
 }
 
 #padres h3{
     padding-top: 10px;
     font-size: 25px;
-    
 }
 
 #datos p{
@@ -152,7 +149,6 @@ body{
     justify-content: space-between;
     margin: auto;
     width: 95%;
-
 }
 
 .dato{
@@ -182,12 +178,77 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#container #asistencia{
+    width: 500px;
+    margin: auto;
+    margin-top: 110px;
+}
+
+#asistencia h3{
+    font-family: "Festive";
+    color: #efb810;
+    font-size: 45px;
+    padding-top: 20px;
+}
+
+#asistencia p{
+    width: 80%;
+    margin: 0px auto;
+    text-align: left;
+}
+
+#asistencia #form{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 80%;
+    padding-top: 40px;
+    margin: auto;
+}
+
+#form label{
+    color: #efb810;
+}
+
+#form input[type="text"],
+#form input[type="number"]{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    background: transparent;
+    border: 1px solid #efb810;
+    border-radius: 10px;
+    padding-left: 7px;
+    color: rgb(255, 249, 249);
+}
+
+#form input[type="submit"]{
+    background-color: #efb810;
+    color: black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    width: 50%;
+    height: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 20px;
+}
+
+#asistencia a{
+    color: white;
+}
+
 #ubicacion h2{
     width: 100%;
     padding-top: 20px;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    font-size: 30px;
+    padding-bottom: 0px;
+    font-family: "festive";
+    font-size: 50px;
     color: #efb810;
 }
 
