--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -180,14 +180,15 @@
         height: 35px;
     }
 
-    #container{
-        width: 100%;
-        padding: 45px;
-        padding-bottom: 0px;  
+    #header{
+        top: 0px
     }
 
-    #header{
-        height: 40px;
+    #container{
+        padding: 0px;
+        width: 95%;
+        margin-top: 80px;
+        padding-bottom: 0px;
     }
 
     #header h1{
@@ -245,10 +246,8 @@
 }
 
 @media(max-width:400px) {
-    #container{
-        padding: 30px;
-        padding-bottom: 0px;
-    }
+
+    
 
     #header li{
         margin-right: 10px;
@@ -256,10 +255,6 @@
 }
 
 @media(max-width:350px) {
-    #container{
-        padding: 20px;
-        padding-bottom: 0px;
-    }
 
     #header li{
         margin-right: 8px;
